examples/test.fcy
let a: int = 5;
let b: int = 4; // used for stack push tests on register count 2
let c: int = a + 3;
let d: int = b + 1;
// let d: int = c + e; // error: usage of undeclared variable e 
